# GCodeWorkShop-draft

./: CMakeLists.txt  INSTALL.md
addons/: CMakeLists.txt
addons/include/: addons-actions.h
addons/src/: addons-actions.cpp
addons/src/bhc/: CMakeLists.txt
addons/src/blockskip/: CMakeLists.txt
addons/src/chamfer/: CMakeLists.txt
addons/src/cleanup/: CMakeLists.txt
addons/src/comment/: CMakeLists.txt
addons/src/compilemacro/: CMakeLists.txt
addons/src/dot/: CMakeLists.txt
addons/src/emptylines/: CMakeLists.txt
addons/src/feeds/: CMakeLists.txt
addons/src/i2m/: CMakeLists.txt
addons/src/i2mprog/: CMakeLists.txt
addons/src/renumber/: CMakeLists.txt
addons/src/spaces/: CMakeLists.txt
addons/src/swapaxes/: CMakeLists.txt
addons/src/triangle/: CMakeLists.txt
cmake/: qt-aliases.cmake
gcodefileserver/: CMakeLists.txt
gcodeshared/: CMakeLists.txt  gcodeshared.pro
gcodeshared/images/default/: application.qrc
gcodeshared/include/utils/: keysequencemap.h
gcodeshared/utils/: keysequencemap.cpp
gcodeworkshop/: CMakeLists.txt  gcodeworkshop.pro
gcodeworkshop/include/: abstractactions.h  gcodeworkshop.h  knownactions.h
gcodeworkshop/src/: defaultkeysequences.cpp  defaultkeysequences.h  documentmanager.cpp  gcoderdocument.cpp  gcodeworkshop.cpp
gcodeworkshop/src/actions/: abstractactions.cpp  editactions.cpp  editactions.h  fileactions.cpp  fileactions.h  helpactions.cpp  helpactions.h  knownactions.cpp  toolactions.cpp  toolactions.h  windowactions.cpp  windowactions.h
gcodeworkshop/src/findtoolbar/: findtoolbar.cpp  findtoolbar.h  findtoolbaractions.cpp  findtoolbaractions.h
